--- a/03. Partie réglementaire - Décrets simples/Article D21-2 - 6362576.md
+++ b/03. Partie réglementaire - Décrets simples/Article D21-2 - 6362576.md
@@ -4,12 +4,12 @@ Les informations qui doivent être portées au compte individuel de retraite son
 l'Etat au plus tard le 31 janvier de chaque année sous la forme d'une déclaration annuelle par les administrations, offices
 ou établissements de l'Etat ou tous autres organismes employeurs des fonctionnaires de l'Etat, magistrats et militaires qui
 les détiennent. Cette déclaration dématérialisée est effectuée selon le format d'échange commun fixé par arrêté conjoint des
-ministres chargés du budget et de la fonction publique. Le défaut de production, dans le délai prescrit, de cette déclaration
-ou l'inexactitude des données qui y sont portées, peut donner lieu à l'application de pénalités, dans les mêmes conditions
-que celles prévues au  III de l'article R. 133-14 du code de la sécurité sociale . Ces pénalités sont recouvrées au moyen
-d'un titre de perception émis par le directeur du service des retraites de l'Etat. Le recouvrement en est assuré par le
-comptable de la direction générale des finances publiques comme en matière de créances de l'Etat étrangères à l'impôt et au
-domaine.
+ministres chargés du budget et de la fonction publique après avis du comité de coordination stratégique en matière de
+retraites de l'Etat. Le défaut de production, dans le délai prescrit, de cette déclaration ou l'inexactitude des données qui
+y sont portées, peut donner lieu à l'application de pénalités, dans les mêmes conditions que celles prévues aux articles R.
+243-12 à R. 243-14 du code de la sécurité sociale. Ces pénalités sont recouvrées au moyen d'un titre de perception émis par
+le directeur du service des retraites de l'Etat. Le recouvrement en est assuré par le comptable de la direction générale des
+finances publiques comme en matière de créances de l'Etat étrangères à l'impôt et au domaine.
 
 Au plus tard deux mois avant la radiation des cadres du fonctionnaire, magistrat ou militaire ou après son décès en activité,
 les administrations, offices ou établissements de l'Etat ou tous autres organismes employeurs des fonctionnaires de l'Etat,
@@ -20,6 +20,11 @@ l'article D. 21-1.
 Pour assurer sa mission de contrôle, le service des retraites de l'Etat peut demander, y compris après la concession de la
 pension, communication de tout ou partie des pièces justificatives des informations portées au compte individuel de retraite.
 Au vu de ces pièces, toute erreur affectant ces informations peut être rectifiée par le service des retraites de l'Etat.
+
+**Nota:**
+
+Conformément au I de l'article 6 du décret n° 2019-1050 du 11 octobre 2019, les présentes dispositions entrent en vigueur à
+compter du 1er janvier 2020.
 
 **Liens relatifs à cet article**
 
@@ -62,7 +67,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Décret n°2019-1179 du 15 novembre 2019 - art. 3
+  - Décret n°2019-1050 du 11 octobre 2019 - art. 5
 
 _Codifié par_:
 
@@ -70,4 +75,4 @@ _Codifié par_:
 
 _Cite_:
 
-  - Code de la sécurité sociale. - art. R133-14
+  - articles R. 243-12 à R. 243-14 du code de la sécurité sociale
